--- a/mowa.html
+++ b/mowa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <title>Cyfry po 4 – wersja iPhone</title>
+    <title>Cyfry po 4 – idealna na iPhone</title>
     <style>
         body { font-family: -apple-system, Arial, sans-serif; text-align: center; margin: 0; padding: 20px; background: #f4f6f9; touch-action: manipulation; }
         h1 { font-size: 28px; color: #2c3e50; margin: 20px 0; }
@@ -35,10 +35,10 @@
     </table>
 
     <div class="info">
-        <strong>Na iPhonie (Safari):</strong><br>
-        • Mów cyfry szybko lub powoli – skrypt sam dzieli co 4 cyfry<br>
-        • Każda grupa pojawia się od razu + jest powtarzana na głos<br>
-        • Nie czekaj na długą pauzę – działa płynnie!
+        <strong>Teraz na iPhonie (Safari):</strong><br>
+        • Grupy pojawiają się od razu<br>
+        • Każda grupa powtarzana na głos prawie natychmiast<br>
+        • Brak lawiny po zatrzymaniu
     </div>
 
     <script>
@@ -47,18 +47,17 @@
 
         const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
         if (!SpeechRecognition) {
-            alert('Rozpoznawanie mowy nie jest wspierane w tej przeglądarce. Użyj Safari!');
-            statusEl.textContent = 'Użyj Safari na iPhonie';
-            statusEl.style.color = '#d63031';
+            alert('Użyj Safari na iPhonie!');
             throw new Error('No SpeechRecognition');
         }
 
         const recognition = new SpeechRecognition();
         recognition.lang = 'pl-PL';
         recognition.continuous = true;
-        recognition.interimResults = true;  // KLUCZOWE dla iPhone – bieżące wyniki
+        recognition.interimResults = true;
 
-        let buffer = ''; // wszystkie zebrane cyfry w sesji
+        let buffer = '';
+        let pendingSpeak = []; // grupy czekające na odczytanie
 
         const digitToPolish = {
             '0': 'zero', '1': 'jeden', '2': 'dwa', '3': 'trzy', '4': 'cztery',
@@ -66,7 +65,7 @@
         };
 
         function speakGroup(group) {
-            const words = group.split('').map(d => digitToPolish[d] || '');
+            const words = group.split('').map(d => digitToPolish[d]);
             const text = words.join(' ');
             const utter = new SpeechSynthesisUtterance(text);
             utter.lang = 'pl-PL';
@@ -75,79 +74,83 @@
             speechSynthesis.speak(utter);
         }
 
+        function processPendingSpeak() {
+            if (pendingSpeak.length > 0) {
+                const group = pendingSpeak.shift();
+                speakGroup(group);
+                // Planujemy kolejne z małym opóźnieniem
+                setTimeout(processPendingSpeak, 600); // co ~0.6s na grupę – płynnie
+            }
+        }
+
+        function addGroup(group) {
+            const row = document.createElement('tr');
+            const cell = document.createElement('td');
+            cell.textContent = group;
+            row.appendChild(cell);
+            tbody.appendChild(row);
+            row.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
+
+            statusEl.textContent = `Dodano: ${group}`;
+            statusEl.style.color = '#27ae60';
+
+            // Dodaj do kolejki odczytu z małym opóźnieniem
+            pendingSpeak.push(group);
+            if (pendingSpeak.length === 1) {
+                setTimeout(processPendingSpeak, 300); // pierwsze z lekkim opóźnieniem
+            }
+        }
+
         function processBuffer() {
             while (buffer.length >= 4) {
                 const group = buffer.substring(0, 4);
                 buffer = buffer.substring(4);
-
-                const row = document.createElement('tr');
-                const cell = document.createElement('td');
-                cell.textContent = group;
-                row.appendChild(cell);
-                tbody.appendChild(row);
-
-                speakGroup(group);
-
-                statusEl.textContent = `Dodano: ${group}`;
-                statusEl.style.color = '#27ae60';
-
-                // Lekki scroll do najnowszej grupy
-                row.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
+                addGroup(group);
             }
         }
 
         recognition.onresult = (event) => {
-            let tempDigits = '';
+            let hasNewDigits = false;
 
-            // Przetwarzamy wszystkie wyniki (final i interim)
             for (let i = event.resultIndex; i < event.results.length; i++) {
                 const transcript = event.results[i][0].transcript;
                 const digits = transcript.trim().replace(/[^0-9]/g, '');
                 if (digits) {
                     if (event.results[i].isFinal) {
                         buffer += digits;
-                    } else {
-                        tempDigits += digits;
+                        hasNewDigits = true;
                     }
                 }
             }
 
-            // Zawsze przetwarzamy bufor (nawet z interim)
-            if (buffer.length >= 4) {
+            if (hasNewDigits && buffer.length >= 4) {
                 processBuffer();
-            }
-
-            // Opcjonalnie: pokaz tymczasowe w statusie
-            if (tempDigits && buffer.length < 4) {
-                statusEl.textContent = `Słyszę: ...${tempDigits.slice(-4)}`;
             }
         };
 
         recognition.onerror = (event) => {
             console.error('Błąd:', event.error);
-            if (event.error === 'not-allowed') {
-                statusEl.textContent = 'Brak dostępu do mikrofonu!';
-            } else {
-                statusEl.textContent = 'Błąd: ' + event.error;
-            }
+            statusEl.textContent = 'Błąd: ' + event.error;
             statusEl.style.color = '#d63031';
         };
 
         recognition.onstart = () => {
             buffer = '';
+            pendingSpeak = [];
             tbody.innerHTML = '';
             statusEl.textContent = 'Mów cyfry – działam!';
             statusEl.style.color = '#27ae60';
         };
 
         recognition.onend = () => {
-            processBuffer(); // na koniec sesji dodaj resztę (jeśli >=4)
+            processBuffer(); // dodaj ewentualne pozostałe grupy
+            processPendingSpeak(); // dokończ odczytywanie
             statusEl.textContent = 'Zatrzymano. Kliknij Rozpocznij ponownie.';
             statusEl.style.color = '#7f8c8d';
         };
 
         document.getElementById('start').onclick = () => {
-            // Odblokowanie dźwięku na iOS
+            // Odblokowanie dźwięku
             const silent = new SpeechSynthesisUtterance('');
             silent.volume = 0;
             speechSynthesis.speak(silent);
@@ -160,4 +163,4 @@
         };
     </script>
 </body>
-</html>gggggggggggggggggggggggggggggggggggggg
+</html>llllllllllllllllllll
